--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-langchain-chroma==0.1.4
-langchain_openai==0.2.1
-langchain==0.3.1
 Pillow==10.4.0
+openai==1.51.0
+langchain_community==0.3.1
+langchain_openai==0.2.2
+transformers==4.45.1
+torchvision==0.19.1
+langchain_chroma==0.1.4
